--- a/index.html
+++ b/index.html
@@ -1,20 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
-</head>
-<body>
-    <header class="cabecera">
-
-    </header>
-    <main class="cuerpo">
-
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="encabezado">
+      <header class="encabezado__header">
+        <a class="encabezado__header__titulo" href="#"><h1>N-SA</h1></a>
+        <nav class="encabezado__header__menu">
+          <li><a href="#">Sobre mi</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Hobbies</a></li>
+          <li><a href="#">Formación</a></li>
+          <li><a href="#">Proyectos</a></li>
+          <li><a href="#">Contacto</a></li>
+        </nav>
+      </header>
+      <div class="encabezado__presentacion">
+        <div class="encabezado__presentacion__contenido">
+          <h2 class="encabezado__presentacion__contenido__titulo">
+            Hola, mi nombre es <span>Nahuel Sagradin</span> y construyo paginas web
+          </h2>
+          <p class="encabezado__presentacion__contenido__descripcion">
+            Soy formado en Lorem ipsum dolor sit amet consectetur adipisicing
+            elit.
+          </p>
+          <ul class="encabezado__presentacion__contenido__redes">
+            <li><a href="#">Github</a></li>
+            <li><a href="#">Linkedin</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Curriculum</a></li>
+          </ul>
+        </div>
+        <div  class="encabezado__presentacion__fotoPerfil">
+          <img src="imagenes/perfil.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <main class="contenido">
+      <section class="sobreMi">
+        sobre mi
+      </section>
+      <section class="skills&hobbies">
+        skills y hobbies
+      </section>
+      <section class="formacionAcademica">
+        formacion academica
+      </section>
+      <section class="experienciaProfesional">
+        experiencia profesional
+      </section>
+      <section class="contacto">
+        contacto
+      </section>
     </main>
     <footer class="pieDePagina">
-        
+      todos los derechos reservados
     </footer>
-</body>
+  </body>
 </html>
