agrego contenido a la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </section>
     <main class="contenido">
       <section class="sobreMi">
-        sobre mi
+        <h3>Sobre mi</h3>
+        <p>Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
+        <p>firma</p>
       </section>
       <section class="skills&hobbies">
         skills y hobbies
