agrego id a mis secciones para poder acceder a las mismas a traves de mi menu

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <body>
     <section class="encabezado">
       <header class="encabezado__header">
-        <a class="encabezado__header__titulo" href="#"><h1>N-SA</h1></a>
+        <a class="encabezado__header__titulo" href="index.html"><h1>N-SA</h1></a>
         <nav class="encabezado__header__menu">
-          <li><a href="#">Sobre mi</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Hobbies</a></li>
-          <li><a href="#">Formación</a></li>
-          <li><a href="#">Proyectos</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#sobreMi">Sobre mi</a></li>
+          <li><a href="#skills&hobbies">Skills & Hobbies</a></li>
+          <li><a href="#formacion">Formación</a></li>
+          <li><a href="#proyectos">Proyectos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
         </nav>
       </header>
       <div class="encabezado__presentacion">
@@ -43,21 +42,22 @@
       </div>
     </section>
     <main class="contenido">
-      <section class="sobreMi">
+      <section id="sobreMi" class="sobreMi">
         <h3>Sobre mi</h3>
         <p>Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
         <p>firma</p>
+        <a href="#">Descargar CV</a>
       </section>
-      <section class="skills&hobbies">
+      <section id="skills&hobbies" class="skills&hobbies">
         skills y hobbies
       </section>
-      <section class="formacionAcademica">
+      <section id="formacion" class="formacionAcademica">
         formacion academica
       </section>
-      <section class="experienciaProfesional">
+      <section id="proyectos" class="experienciaProfesional">
         experiencia profesional
       </section>
-      <section class="contacto">
+      <section id="contacto" class="contacto">
         contacto
       </section>
     </main>
