--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </section>
     <main class="contenido">
       <section id="sobreMi" class="sobreMi">
-        <h3>Sobre mi</h3>
-        <p>Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
-        <p>firma</p>
-        <a href="#">Descargar CV</a>
+        <h3 class="sobreMi__titulo">Sobre mi</h3>
+        <p class="sobreMi__descripcion">Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
+        <p class="sobreMI__firma">firma</p>
+        <a class="sobreMi__DescargarCV" href="#">Descargar CV</a>
       </section>
       <section id="skills&hobbies" class="skills&hobbies">
         skills y hobbies
