agrego url correspondientes a mis redes en mi index

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             elit.
           </p>
           <ul class="encabezado__presentacion__contenido__redes">
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Linkedin</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li><a href="https://github.com/NahuelSagradin">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/nsagradin/">Linkedin</a></li>
+            <li><a href="https://www.instagram.com/nahuel.sagradin/">Instagram</a></li>
             <li><a href="#">Curriculum</a></li>
           </ul>
         </div>
