modifico informacion sobremi

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="contenido">
       <section id="sobreMi" class="sobreMi">
         <h3 class="sobreMi__titulo">Sobre mi</h3>
-        <p class="sobreMi__descripcion">Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
+        <p class="sobreMi__descripcion">Soy estudiante de la carrera de Ingeniería en Informática en la Universidad Nacional Arturo Jauretche, actualmente me encuentro participando del Programa ONE Latam. Además de seguir estudiando en plataformas online como Educacion IT,Udemy, etc. Soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
         <p class="sobreMI__firma">firma</p>
         <a class="sobreMi__DescargarCV" href="#">Descargar CV</a>
       </section>
