agrego contenido sobre skills y hobbies

--- a/index.html
+++ b/index.html
@@ -49,7 +49,25 @@
         <a class="sobreMi__DescargarCV" href="#">Descargar CV</a>
       </section>
       <section id="skills&hobbies" class="skills&hobbies">
-        skills y hobbies
+        <div class="skills">
+          <h3 class="skills__titulo"></h3>
+          <p class="skills__descripcion">
+            JAVA
+            C#
+            HTML5
+            CSS
+            JAVASCRIPT
+            MYSQL
+            GIT/GITHUB
+            
+          </p>
+        </div>
+        <div class="hobbies">
+          <h4 class="hobbies__titulo"></h4>
+          <p class="hobbies__descripcion">
+
+          </p>
+        </div>
       </section>
       <section id="formacion" class="formacionAcademica">
         formacion academica
