--- a/index.html
+++ b/index.html
@@ -5,46 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="encabezado">
-      <header class="encabezado__header">
-        <a class="encabezado__header__titulo" href="index.html"><h1>N-SA</h1></a>
-        <nav class="encabezado__header__menu">
-          <li><a href="#sobreMi">Sobre mi</a></li>
-          <li><a href="#skills&hobbies">Skills & Hobbies</a></li>
-          <li><a href="#formacion">Formación</a></li>
-          <li><a href="#proyectos">Proyectos</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </nav>
-      </header>
-      <div class="encabezado__presentacion">
-        <div class="encabezado__presentacion__contenido">
-          <h2 class="encabezado__presentacion__contenido__titulo">
-            Hola, mi nombre es <span>Nahuel Sagradin</span> y construyo paginas web
+    <header class="encabezado">
+      <a class="encabezado__titulo" href="index.html"><h1>N-SA</h1></a>
+      <nav class="encabezado__menu">
+        <li><a href="#sobreMi">Sobre mi</a></li>
+        <li><a href="#skills&hobbies">Skills & Hobbies</a></li>
+        <li><a href="#formacion">Formación</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </nav>
+    </header>
+
+    <!-- 
+      <main class="contenido">
+      <section class="contenido__presentacion">
+          <h2 class="contenido__presentacion__titulo">
+            Hola, mi nombre es <span>Nahuel Sagradin</span> y construyo paginas
+            web
           </h2>
-          <p class="encabezado__presentacion__contenido__descripcion">
+          <p class="contenido__presentacion__descripcion">
             Soy formado en Lorem ipsum dolor sit amet consectetur adipisicing
             elit.
           </p>
-          <ul class="encabezado__presentacion__contenido__redes">
+          <ul class="contenido__presentacion__redes">
             <li><a href="#">Github</a></li>
             <li><a href="#">Linkedin</a></li>
             <li><a href="#">Instagram</a></li>
             <li><a href="#">Curriculum</a></li>
           </ul>
-        </div>
-        <div  class="encabezado__presentacion__fotoPerfil">
+        <div class="contenido__presentacion__fotoPerfil">
           <img src="imagenes/perfil.jpg" alt="" />
         </div>
-      </div>
-    </section>
-    <main class="contenido">
+      </section>
       <section id="sobreMi" class="sobreMi">
         <h3>Sobre mi</h3>
-        <p>Soy estudiante de Ingeniería en Informática, actualmente me encuentro cursando la carrera Java en Educación IT. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar y aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.</p>
+        <p>
+          Soy estudiante de Ingeniería en Informática, actualmente me encuentro
+          cursando la carrera Java en Educación IT. Además de seguir estudiando
+          en plataformas online como Udemy, soy autodidacta, me gusta investigar
+          y aportar una actitud positiva, voluntad y motivación para aprender
+          nuevas tecnologías.
+        </p>
         <p>firma</p>
         <a href="#">Descargar CV</a>
       </section>
@@ -57,12 +62,9 @@
       <section id="proyectos" class="experienciaProfesional">
         experiencia profesional
       </section>
-      <section id="contacto" class="contacto">
-        contacto
-      </section>
+      <section id="contacto" class="contacto">contacto</section>
     </main>
-    <footer class="pieDePagina">
-      todos los derechos reservados
-    </footer>
+    <footer class="pieDePagina">todos los derechos reservados</footer>
+    -->
   </body>
 </html>
