reorganice mi seccion/presentacion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portafolio</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/presentacion.css">
   </head>
   <body>
     <header class="encabezado">
@@ -22,22 +23,24 @@
 
     <main class="contenido">
       <section class="contenido__presentacion">
-        <h2 class="contenido__presentacion__titulo">
-          Hola, mi nombre es <span>Nahuel Sagradin</span> y construyo paginas
-          web
-        </h2>
-        <p class="contenido__presentacion__descripcion">
-          Soy formado en Lorem ipsum dolor sit amet consectetur adipisicing
-          elit.
-        </p>
-        <ul class="contenido__presentacion__redes">
-          <li><a href="#">Github</a></li>
-          <li><a href="#">Linkedin</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Curriculum</a></li>
-        </ul>
         <div class="contenido__presentacion__fotoPerfil">
           <img src="imagenes/perfil.jpg" alt="" />
+        </div>
+        <div class="contenido__presentacion__descripcion">
+          <h2 class="contenido__presentacion__descripcion__titulo">
+            Hola, mi nombre es <span>Nahuel Sagradin</span> y construyo paginas
+            web
+          </h2>
+          <p class="contenido__presentacion__descripcion__info">
+            Soy formado en Lorem ipsum dolor sit amet consectetur adipisicing
+            elit.
+          </p>
+          <ul class="contenido__presentacion__descripcion__redes">
+            <li class="item-redes"><a href="#">Github</a></li>
+            <li class="item-redes"><a href="#">Linkedin</a></li>
+            <li class="item-redes"><a href="#">Instagram</a></li>
+            <li class="item-descargar-cv"><a href="#">Descargar Curriculum</a></li>
+          </ul>
         </div>
       </section>
       <!--
