--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/presentacion.css">
   </head>
@@ -36,9 +37,9 @@
             elit.
           </p>
           <ul class="contenido__presentacion__descripcion__redes">
-            <li class="item-redes"><a href="#">Github</a></li>
-            <li class="item-redes"><a href="#">Linkedin</a></li>
-            <li class="item-redes"><a href="#">Instagram</a></li>
+            <li class="item-redes"><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li class="item-redes"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li class="item-redes"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             <li class="item-descargar-cv"><a href="#">Descargar Curriculum</a></li>
           </ul>
         </div>
