agrego contenido a mi index en section sobre-mi

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/presentacion.css">
+    <link rel="stylesheet" href="css/presentacion.css" />
+    <link rel="stylesheet" href="css/sobre-mi.css">
   </head>
   <body>
     <header class="encabezado">
@@ -37,15 +44,22 @@
             elit.
           </p>
           <ul class="contenido__presentacion__descripcion__redes">
-            <li class="item-redes"><a href="#"><i class="fa-brands fa-github"></i></a></li>
-            <li class="item-redes"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li class="item-redes"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li class="item-descargar-cv"><a href="#">Descargar Curriculum</a></li>
+            <li class="item-redes">
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li class="item-redes">
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+            <li class="item-redes">
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li class="item-descargar-cv">
+              <a href="#">Descargar Curriculum</a>
+            </li>
           </ul>
         </div>
       </section>
-      <!--
-        <section id="sobreMi" class="sobreMi">
+      <section id="sobreMi" class="contenido__sobreMi">
         <h3>Sobre mi</h3>
         <p>
           Soy estudiante de Ingeniería en Informática, actualmente me encuentro
@@ -57,6 +71,8 @@
         <p>firma</p>
         <a href="#">Descargar CV</a>
       </section>
+      <!--
+        
       <section id="skills&hobbies" class="skills&hobbies">
         skills y hobbies
       </section>
