--- a/index.html
+++ b/index.html
@@ -53,29 +53,30 @@
             <li class="item-redes">
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </li>
-            <li class="item-descargar-cv">
+            <!--
+              <li class="item-descargar-cv">
               <a href="#">Descargar Curriculum</a>
-            </li>
+              </li>
+            -->
           </ul>
         </div>
       </section>
       <section id="sobreMi" class="contenido__sobreMi">
-        <h3>Sobre mi</h3>
-        <p>
+        <h3 class="contenido__sobreMi__titulo">Sobre mi</h3>
+        <p class="contenido__sobreMi__descripcion">
           Soy estudiante de Ingeniería en Informática, actualmente me encuentro
           cursando la carrera Java en Educación IT. Además de seguir estudiando
           en plataformas online como Udemy, soy autodidacta, me gusta investigar
           y aportar una actitud positiva, voluntad y motivación para aprender
           nuevas tecnologías.
         </p>
-        <p>firma</p>
-        <a href="#">Descargar CV</a>
+        <p class="contenido__sobreMi__firma">firma</p>
+        <a class="contenido__sobreMi__descargar-cv" href="#">Descargar CV</a>
       </section>
-      <!--
-        
-      <section id="skills&hobbies" class="skills&hobbies">
+      <section id="skills-hobbies" class="contenido__skills-hobbies">
         skills y hobbies
       </section>
+      <!--
       <section id="formacion" class="formacionAcademica">
         formacion academica
       </section>
