agrego info sobre skills a index

--- a/index.html
+++ b/index.html
@@ -64,17 +64,112 @@
       <section id="sobreMi" class="contenido__sobreMi">
         <h3 class="contenido__sobreMi__titulo">Sobre mi</h3>
         <p class="contenido__sobreMi__descripcion">
-          Soy estudiante de Ingeniería en Informática, actualmente me encuentro
-          cursando la carrera Java en Educación IT. Además de seguir estudiando
-          en plataformas online como Udemy, soy autodidacta, me gusta investigar
-          y aportar una actitud positiva, voluntad y motivación para aprender
-          nuevas tecnologías.
+          Soy estudiante de la carrera Ingeniería en Informática en la Universidad Nacional Arturo Jauretche, actualmente me encuentro
+          participando del programa One de Oracle en colaboracion con Alura Latam. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar, aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.
         </p>
         <p class="contenido__sobreMi__firma">firma</p>
         <a class="contenido__sobreMi__descargar-cv" href="#">Descargar CV</a>
       </section>
       <section id="skills-hobbies" class="contenido__skills-hobbies">
-        skills y hobbies
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>Html</p>
+            <span class="skills__porcentaje">60%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="html" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>Css</p>
+            <span class="skills__porcentaje">60%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="css" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>JavaScript</p>
+            <span class="skills__porcentaje">25%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="js" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>Java</p>
+            <span class="skills__porcentaje">60%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="html" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>Html y Css</p>
+            <span class="skills__porcentaje">60%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="html" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>MySQL</p>
+            <span class="skills__porcentaje">25%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="mysql" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>C#</p>
+            <span class="skills__porcentaje">30%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="csharp" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>POO</p>
+            <span class="skills__porcentaje">50%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="poo" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>UML</p>
+            <span class="skills__porcentaje">30%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="uml" class=""></div>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div class="skills__info">
+            <p><span class="skills__items"></span>Git/Github</p>
+            <span class="skills__porcentaje">25%</span>
+          </div>
+          <div class="skills__barra">
+            <div id="git" class=""></div>
+          </div>
+        </div>
       </section>
       <!--
       <section id="formacion" class="formacionAcademica">
