--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/presentacion.css" />
-    <link rel="stylesheet" href="css/sobre-mi.css">
+    <link rel="stylesheet" href="css/sobre-mi.css" />
+    <link rel="stylesheet" href="css/skills-hobbies.css" />
   </head>
   <body>
     <header class="encabezado">
-      <a class="encabezado__titulo" href="index.html"><h1>N-SA</h1></a>
+      <a class="encabezado__titulo" href="index.html"><h1>< /NSa ></h1></a>
       <nav class="encabezado__menu">
         <li><a href="#sobreMi">Sobre mi</a></li>
-        <li><a href="#skills&hobbies">Skills & Hobbies</a></li>
+        <li><a href="#skillsHobbies">Skills & Hobbies</a></li>
         <li><a href="#formacion">Formación</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -45,13 +46,13 @@
           </p>
           <ul class="contenido__presentacion__descripcion__redes">
             <li class="item-redes">
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/NahuelSagradin"><i class="fa-brands fa-github fa-lg"></i></a>
             </li>
             <li class="item-redes">
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
             </li>
             <li class="item-redes">
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
             </li>
             <!--
               <li class="item-descargar-cv">
@@ -64,110 +65,80 @@
       <section id="sobreMi" class="contenido__sobreMi">
         <h3 class="contenido__sobreMi__titulo">Sobre mi</h3>
         <p class="contenido__sobreMi__descripcion">
-          Soy estudiante de la carrera Ingeniería en Informática en la Universidad Nacional Arturo Jauretche, actualmente me encuentro
-          participando del programa One de Oracle en colaboracion con Alura Latam. Además de seguir estudiando en plataformas online como Udemy, soy autodidacta, me gusta investigar, aportar una actitud positiva, voluntad y motivación para aprender nuevas tecnologías.
+          Soy estudiante de la carrera Ingeniería en Informática en la
+          Universidad Nacional Arturo Jauretche, actualmente me encuentro
+          participando del programa One de Oracle en colaboracion con Alura
+          Latam. Además de seguir estudiando en plataformas online como Udemy,
+          soy autodidacta, me gusta investigar, aportar una actitud positiva,
+          voluntad y motivación para aprender nuevas tecnologías.
         </p>
         <p class="contenido__sobreMi__firma">firma</p>
         <a class="contenido__sobreMi__descargar-cv" href="#">Descargar CV</a>
       </section>
-      <section id="skills-hobbies" class="contenido__skills-hobbies">
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>Html</p>
-            <span class="skills__porcentaje">60%</span>
+      <section id="skillsHobbies" class="skillsHobbies">
+        <h3 class="skillsHobbies__titulo">Skills</h3>
+        <div class="skillsHobbies__item">
+          <div class="skills">
+            <span class="skills__icono"
+              ><img src="imagenes/icon-html.png" alt=""></i
+            ></span>
+            <p>Html 5</p>
           </div>
-          <div class="skills__barra">
-            <div id="html" class=""></div>
+
+          <div class="skills">
+            <span class="skills__icono"
+              ><img src="imagenes/icon-css3.png" alt=""></span>
+            <p>Css 3</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"
+              ><img src="imagenes/240px-JavaScript-logo.png" alt=""></span>
+            <p>JavaScript</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/icon-java.png" alt=""></span>
+            <p>Java</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/c_sharp.png" alt=""></span>
+            <p>C#</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/mysql-logo.png" alt=""></span>
+            <p>MySQL</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/oop.png" alt=""></span>
+            <p>POO</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/uml_lg.jpg" alt=""></span>
+            <p>UML</p>
+          </div>
+
+          <div class="skills">
+            <span class="skills__icono"><img src="imagenes/Git-Icon-1788C.png" alt=""></span>
+            <p>Git</p>
           </div>
         </div>
 
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>Css</p>
-            <span class="skills__porcentaje">60%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="css" class=""></div>
-          </div>
-        </div>
+        <h3 class="skillsHobbies__titulo">Hobbies</h3>
+        <div class="skillsHobbies__item">
+            <div class="hobbies">
+              <span class="hobbies__icono"><img src="imagenes/futbol.jpg" alt=""></span>
+              <p>Futbol</p>
+            </div>
 
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>JavaScript</p>
-            <span class="skills__porcentaje">25%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="js" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>Java</p>
-            <span class="skills__porcentaje">60%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="html" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>Html y Css</p>
-            <span class="skills__porcentaje">60%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="html" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>MySQL</p>
-            <span class="skills__porcentaje">25%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="mysql" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>C#</p>
-            <span class="skills__porcentaje">30%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="csharp" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>POO</p>
-            <span class="skills__porcentaje">50%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="poo" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>UML</p>
-            <span class="skills__porcentaje">30%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="uml" class=""></div>
-          </div>
-        </div>
-
-        <div class="skills">
-          <div class="skills__info">
-            <p><span class="skills__items"></span>Git/Github</p>
-            <span class="skills__porcentaje">25%</span>
-          </div>
-          <div class="skills__barra">
-            <div id="git" class=""></div>
+            <div class="hobbies">
+              <span class="hobbies__icono"><img src="imagenes/codear.png" alt=""></span>
+              <p>Codear</p>
+            </div>
           </div>
         </div>
       </section>
