agrego info a mi footer y modifico su style, class redes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/presentacion.css" />
     <link rel="stylesheet" href="css/sobre-mi.css" />
     <link rel="stylesheet" href="css/skills-hobbies.css" />
+
+    <link rel="stylesheet" href="css/pieDePagina.css">
   </head>
   <body>
     <header class="encabezado">
@@ -44,21 +46,19 @@
             Soy formado en Lorem ipsum dolor sit amet consectetur adipisicing
             elit.
           </p>
-          <ul class="contenido__presentacion__descripcion__redes">
+          <ul class="redes">
             <li class="item-redes">
               <a href="https://github.com/NahuelSagradin"><i class="fa-brands fa-github fa-lg"></i></a>
             </li>
             <li class="item-redes">
-              <a href="#"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
+              <a href="https://www.linkedin.com/mwlite/in/nsagradin"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
             </li>
             <li class="item-redes">
-              <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+              <a href="https://www.instagram.com/nahuel.sagradin/"><i class="fa-brands fa-instagram fa-lg"></i></a>
             </li>
-            <!--
               <li class="item-descargar-cv">
               <a href="#">Descargar Curriculum</a>
               </li>
-            -->
           </ul>
         </div>
       </section>
@@ -73,7 +73,9 @@
           voluntad y motivación para aprender nuevas tecnologías.
         </p>
         <p class="contenido__sobreMi__firma">firma</p>
-        <a class="contenido__sobreMi__descargar-cv" href="#">Descargar CV</a>
+        <!--
+          <a class="contenido__sobreMi__descargar-cv" href="#">Descargar CV</a>
+        -->
       </section>
       <section id="skillsHobbies" class="skillsHobbies">
         <h3 class="skillsHobbies__titulo">Skills</h3>
@@ -118,7 +120,7 @@
           </div>
 
           <div class="skills">
-            <span class="skills__icono"><img src="imagenes/uml_lg.jpg" alt=""></span>
+            <span class="skills__icono"><img src="imagenes/uml_logo.png" alt=""></span>
             <p>UML</p>
           </div>
 
@@ -142,16 +144,46 @@
           </div>
         </div>
       </section>
-      <!--
+
       <section id="formacion" class="formacionAcademica">
-        formacion academica
+        <h3>Formacion academica</h3>
+        <div class="formacionAcademica__items">
+          <span class="certificado"></span>
+          <h4>titulo conseguido 1</h4>
+        </div>
+
+        <div class="formacionAcademica__items">
+          <span class="certificado"></span>
+          <h4>titulo conseguido </h4>
+        </div>
+
+        <div class="formacionAcademica__items">
+          <span class="certificado"></span>
+          <h4>titulo conseguido 3</h4>
+        </div>
       </section>
+
       <section id="proyectos" class="experienciaProfesional">
         experiencia profesional
       </section>
       <section id="contacto" class="contacto">contacto</section>
-      -->
+
     </main>
-    <footer class="pieDePagina">todos los derechos reservados</footer>
+    <footer class="pieDePagina">
+      <p>Todos los derechos reservados</p>
+      <div class="pieDePagina__redes">
+        <ul class="redes">
+          <li class="item-redes">
+            <a href="https://github.com/NahuelSagradin"><i class="fa-brands fa-github fa-lg"></i></a>
+          </li>
+          <li class="item-redes">
+            <a href="https://www.linkedin.com/mwlite/in/nsagradin"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
+          </li>
+          <li class="item-redes">
+            <a href="https://www.instagram.com/nahuel.sagradin/"><i class="fa-brands fa-instagram fa-lg"></i></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
