genero mi formulario de contacto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/skills-hobbies.css" />
 
     <link rel="stylesheet" href="css/pieDePagina.css">
+    <link rel="stylesheet" href="css/contacto.css">
   </head>
   <body>
     <header class="encabezado">
@@ -166,7 +167,18 @@
       <section id="proyectos" class="experienciaProfesional">
         experiencia profesional
       </section>
-      <section id="contacto" class="contacto">contacto</section>
+      <section id="contacto" class="contacto">
+        <h3>Contactanos</h3>
+        <img src="" alt="">
+        <form action="">
+          <input type="text" placeholder="Nombre">
+          <input type="email" placeholder="info@dominio.com">
+          <input type="text" placeholder="Asunto">
+          <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje"></textarea>
+
+          <input type="submit" value="Enviar" class="btn-enviar">
+        </form>
+      </section>
 
     </main>
     <footer class="pieDePagina">
